# founderAiCheap

./: .dockerignore  .env.cloud.example  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  LICENSE-docs.md  README.md  SECURITY.md  docker-compose.claude.yml  docker-compose.cloud.yml  docker-compose.ollama.yml  docker-compose.openai.yml  netlify.toml
.chrome-pdf-profile/: Local State
.chrome-pdf-profile-fr/: Local State
.github/: PULL_REQUEST_TEMPLATE.md
config/: agents.json  founderai.cloud.json  founderai.example.json  founderai.json  founderai.smoke.json  nurture_sequences.json  pio_deadlines.json
docs/: 404.html  about-fr.html  about.html  ai-assisted-development-safety.md  app-spec.md  atbc-2026-drone-surveys-fr.html  atbc-2026-drone-surveys.html  brand-brief.md  campaign-link-map.md  case-study-biodiversity-dataset-cleaning.md  case-study.html  cloud-deployment.md  cloud-operations.md  continuous-improvement.md  contributor-backlog.md  data-dictionary.md  digital-delivery-policy.html  errors-log.md  ethics-checklist-fr.html  ethics-checklist.html  feature-backlog.md  field-notes.html  foundation-compliance-audit.md  github-admin-checklist.md  independent-services-en.md  index.html  index.md  integrations.md  oplurix-daily-book-fr.html  oplurix-daily-book.html  oplurix-daily-book.md  oplurix-master-improvement-roadmap.md  outbound-pack.html  privacy.html  project-charter.md  project-docs.html  projects.html  provider-troubleshooting.md  repo-site-improvement-plan.md  risk-register.md  (+9 more)
(+415 files in other folders)
