[package]
name = "founderai-ollama-rust"
version = "0.1.0"
edition = "2021"
description = "Rust rebuild of FounderAI with file-auditable orchestration and switchable Ollama/OpenAI providers."
license = "MIT"
readme = "README.md"
repository = "https://github.com/HajaFabrice/founderAiCheap"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.6", features = ["derive"] }
csv = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
